k8s/backend-k8s-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: django-backend-app
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /v1/user
          backend:
            serviceName: django-backend
            servicePort: 8080
        - path: /v1/recepie
          backend:
            serviceName: django-backend
            servicePort: 8080
